--- a/style.css
+++ b/style.css
@@ -2,3 +2,66 @@
 
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css');
 
+body{
+    margin:0;
+    padding:0;
+}
+
+header{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.image-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color:rgba(0,0,0,0.8)
+}
+.image-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.4;
+}
+.banner{
+    position: absolute;
+    top: 30%;
+    left: 20%;
+}
+.banner h1{
+    color: white;
+    font-size: 3rem;
+    font-family: "Baloo Tamma 2",serif;
+    font-weight: 200 ;
+    text-shadow: .2rem .3rem 2px rgba(0,0,0,0.4) ;
+    line-height: 3.5rem;
+}
+.banner p{
+    font-family: "Mulish" ,serif;
+    color: white;
+    font-size:2rem;
+    text-shadow: .2rem .2rem rgba(0,0,0,0.4);
+    margin-bottom: 2rem;
+}
+.banner button{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    background: #fc4a1a;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right,#fc4a1a  , #f7b733);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #fc4a1a ,  #f7b733); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 1rem 2rem;
+    border: none;
+    font-weight: 300;
+    cursor:pointer;
+    border-radius: 5px;
+}
+.banner button:hover{
+    opacity: 0.8;
+    color:black;
+}
