--- a/style.css
+++ b/style.css
@@ -25,6 +25,16 @@ header{
     height: 100%;
     object-fit: cover;
     opacity: 0.4;
+    animation: zoom 10s;
+}
+
+@keyframes zoom{
+    0%{
+        transform:scale(1.5)
+    }
+    100%{
+        transform:scale(1)
+    }
 }
 .banner{
     position: absolute;
@@ -38,13 +48,19 @@ header{
     font-weight: 200 ;
     text-shadow: .2rem .3rem 2px rgba(0,0,0,0.4) ;
     line-height: 3.5rem;
+    animation: moveBanner 0.5s forwards;
+    opacity: 0;
 }
 .banner p{
     font-family: "Mulish" ,serif;
     color: white;
     font-size:2rem;
-    text-shadow: .2rem .2rem rgba(0,0,0,0.4);
+    font-weight: 400;
+    text-shadow: .2rem .2rem rgba(0,1,100,0.4);
     margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 0.7s forwards;
+    
 }
 .banner button{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -60,8 +76,21 @@ header{
     font-weight: 300;
     cursor:pointer;
     border-radius: 5px;
+    opacity: 0;
+    animation: moveBanner 0.9s forwards;
+    
 }
 .banner button:hover{
     opacity: 0.8;
     color:black;
+}
+@keyframes moveBanner{
+    0%{
+        transform: translateY(10rem) rotateY(30deg);
+    }
+    
+    100%{
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
 }
